# AutoDog

./: Architecture_mindmap.mm.md  CMakeLists.txt  README.md  start.sh
DogControl/: DogControl.ino  LegConfig.ino  MoveFunc.ino
DogControl/servoTest/: servoTest.ino
config/: config.h
include/: Camera.h  CentralSystem.h  DogStatus.h  Lidar.h  MainSystem.h  Map.h  MotorControlSystem.h  VisualOdometry.h  common_header.h  lidar.h
lib/sdk/: CMakeLists.txt
src/: Camera.cpp  CentralSystem.cpp  DogStatus.cpp  Lidar.cpp  MainSystem.cpp  MotorControlSystem.cpp  VisualOdometry.cpp  lidar.cpp  main.cpp
test_codes/: CMakeLists.txt  calibration.cpp  image_capture_program.cpp
test_codes/BA/: bundle_adjustment.hpp
